# wplot

./: .gitignore  CMakeLists.txt  Doxyfile
demo/: CMakeLists.txt
demo/arrow_simple/: CMakeLists.txt  main.cpp
demo/arrow_styled/: CMakeLists.txt  main.cpp
demo/axes_simple/: CMakeLists.txt  main.cpp
demo/axes_styled/: CMakeLists.txt  main.cpp
demo/background/: CMakeLists.txt  main.cpp
demo/background_gradient/: CMakeLists.txt  main.cpp
demo/background_solid/: CMakeLists.txt
demo/barplot2d_simple/: CMakeLists.txt  main.cpp
demo/barplot2d_styled/: CMakeLists.txt
demo/candlestick2d_simple/: CMakeLists.txt
demo/candlestick2d_styled/: CMakeLists.txt  main.cpp
demo/candlestickgraph2d_simple/: CMakeLists.txt
demo/candlestickgraph2d_styled/: CMakeLists.txt
demo/cartesianbarplot2d_simple/: CMakeLists.txt  main.cpp
demo/cartesianbarplot2d_styled/: CMakeLists.txt  main.cpp
demo/cartesiancandlestick2d_simple/: CMakeLists.txt  main.cpp
demo/cartesiancandlestickgraph2d_simple/: CMakeLists.txt  main.cpp
demo/cartesiancandlestickgraph2d_styled/: CMakeLists.txt  main.cpp
demo/cartesiangrid2d_black/: CMakeLists.txt  main.cpp
demo/cartesiangrid2d_color/: CMakeLists.txt  main.cpp
demo/cartesianlineplot2d_filling/: CMakeLists.txt  main.cpp
demo/cartesianlineplot2d_simple/: CMakeLists.txt  main.cpp
demo/cartesianlineplot2d_styled/: CMakeLists.txt  main.cpp
demo/cartesianohlcgraph2d_simple/: CMakeLists.txt  main.cpp
demo/cartesianohlcgraph2d_styled/: CMakeLists.txt  main.cpp
demo/cartesianscatterplot2d_circle/: CMakeLists.txt  main.cpp
demo/circle_simple/: CMakeLists.txt  main.cpp
demo/circle_styled/: CMakeLists.txt  main.cpp
demo/grid/: CMakeLists.txt
demo/grid_black/: CMakeLists.txt  main.cpp
demo/grid_color/: CMakeLists.txt  main.cpp
demo/lineplot/: CMakeLists.txt
demo/lineplot_filling/: CMakeLists.txt  main.cpp
demo/lineplot_styled/: CMakeLists.txt  main.cpp
demo/ohlcbar2d_simple/: CMakeLists.txt  main.cpp
demo/ohlcbar2d_styled/: CMakeLists.txt  main.cpp
demo/ohlcgraph2d_simple/: CMakeLists.txt
demo/ohlcgraph2d_styled/: CMakeLists.txt
demo/polargrid2d_simple/: CMakeLists.txt  main.cpp
demo/polarlineplot2d_filled/: CMakeLists.txt  main.cpp
demo/polarlineplot2d_gradient/: CMakeLists.txt  main.cpp
demo/polarlineplot2d_simple/: CMakeLists.txt  main.cpp
demo/polarlineplot2d_styled/: CMakeLists.txt  main.cpp
demo/rectangle_simple/: CMakeLists.txt  main.cpp
demo/rectangle_styled/: CMakeLists.txt  main.cpp
demo/scatterplot_circle/: CMakeLists.txt
demo/text_simple/: CMakeLists.txt  main.cpp
demo/text_styled/: CMakeLists.txt  main.cpp
demo/tick_labels_simple/: CMakeLists.txt  main.cpp
wplot/: Arrow2D.cpp  Arrow2D.h  Axes2D.cpp  Axes2D.h  Background.cpp  Background.h  BarGraph2D.cpp  BarGraph2D.h  CMakeLists.txt  CandleStick2D.cpp  CandleStick2D.h  CandleStickGraph2D.cpp  CandleStickGraph2D.h  CartesianBarGraph2D.cpp  CartesianBarGraph2D.h  CartesianGraph2D.cpp  CartesianGraph2D.h  CartesianGrid2D.cpp  CartesianGrid2D.h  CartesianLineGraph2D.cpp  CartesianLineGraph2D.h  CartesianPlot2D.cpp  CartesianPlot2D.h  CartesianScalarGraph2D.cpp  CartesianScalarGraph2D.h  CartesianScatterGraph2D.cpp  CartesianScatterGraph2D.h  Circle.cpp  Circle.h  FinancialGraph2D.cpp  FinancialGraph2D.h  FinancialItem2D.cpp  FinancialItem2D.h  Graph2D.h  Grid2D.cpp  Grid2D.h  Item2D.cpp  Item2D.h  Layer.cpp  Layer.h  (+30 more)
wplot/Private/: LinearTicksCalculator.cpp  LinearTicksCalculator.h  TicksCalculator.cpp  TicksCalculator.h
