cmake_minimum_required (VERSION 3.0.0)

add_subdirectory (background_solid)
add_subdirectory (background_gradient)
add_subdirectory (grid_black)
add_subdirectory (grid_color)
add_subdirectory (circle_simple)
add_subdirectory (circle_styled)
add_subdirectory (rectangle_simple)
add_subdirectory (rectangle_styled)
