cmake_minimum_required (VERSION 3.0.2)

add_subdirectory (background_solid)
add_subdirectory (background_gradient)
add_subdirectory (cartesiangrid2d_black)
add_subdirectory (cartesiangrid2d_color)
add_subdirectory (polargrid2d_simple)
add_subdirectory (circle_simple)
add_subdirectory (circle_styled)
add_subdirectory (rectangle_simple)
add_subdirectory (rectangle_styled)
add_subdirectory (cartesianscatterplot2d_circle)
add_subdirectory (cartesianlineplot2d_simple)
add_subdirectory (cartesianlineplot2d_styled)
add_subdirectory (cartesianlineplot2d_filling)
add_subdirectory (polarlineplot2d_simple)
add_subdirectory (polarlineplot2d_styled)
add_subdirectory (polarlineplot2d_filled)
add_subdirectory (polarlineplot2d_gradient)
add_subdirectory (arrow_simple)
add_subdirectory (arrow_styled)
add_subdirectory (axes_simple)
add_subdirectory (axes_styled)
add_subdirectory (text_simple)
add_subdirectory (text_styled)
add_subdirectory (tick_labels_simple)
add_subdirectory (cartesianbarplot2d_simple)
add_subdirectory (cartesianbarplot2d_styled)
add_subdirectory (cartesiancandlestick2d_simple)
add_subdirectory (candlestick2d_styled)
add_subdirectory (ohlcbar2d_simple)
add_subdirectory (ohlcbar2d_styled)
add_subdirectory (cartesiancandlestickgraph2d_simple)
add_subdirectory (cartesiancandlestickgraph2d_styled)
add_subdirectory (cartesianohlcgraph2d_simple)
add_subdirectory (cartesianohlcgraph2d_styled)

add_dependencies (demo_background_solid wplot)
add_dependencies (demo_background_gradient wplot)
add_dependencies (demo_cartesiangrid2d_black wplot)
add_dependencies (demo_cartesiangrid2d_color wplot)
add_dependencies (demo_polargrid2d_simple wplot)
add_dependencies (demo_circle_simple wplot)
add_dependencies (demo_circle_styled wplot)
add_dependencies (demo_rectangle_simple wplot)
add_dependencies (demo_rectangle_styled wplot)
add_dependencies (demo_cartesianscatterplot2d_circle wplot)
add_dependencies (demo_cartesianlineplot2d_simple wplot)
add_dependencies (demo_cartesianlineplot2d_styled wplot)
add_dependencies (demo_cartesianlineplot2d_filling wplot)
add_dependencies (demo_polarlineplot2d_simple wplot)
add_dependencies (demo_polarlineplot2d_styled wplot)
add_dependencies (demo_polarlineplot2d_filled wplot)
add_dependencies (demo_polarlineplot2d_gradient wplot)
add_dependencies (demo_arrow_simple wplot)
add_dependencies (demo_arrow_styled wplot)
add_dependencies (demo_axes_simple wplot)
add_dependencies (demo_axes_styled wplot)
add_dependencies (demo_text_simple wplot)
add_dependencies (demo_text_styled wplot)
add_dependencies (demo_tick_labels_simple wplot)
add_dependencies (demo_cartesianbarplot2d_simple wplot)
add_dependencies (demo_cartesianbarplot2d_styled wplot)
add_dependencies (demo_cartesiancandlestick2d_simple wplot)
add_dependencies (demo_candlestick2d_styled wplot)
add_dependencies (demo_ohlcbar2d_simple wplot)
add_dependencies (demo_ohlcbar2d_styled wplot)
add_dependencies (demo_cartesiancandlestickgraph2d_simple wplot)
add_dependencies (demo_cartesiancandlestickgraph2d_styled wplot)
add_dependencies (demo_cartesianohlcgraph2d_simple wplot)
add_dependencies (demo_cartesianohlcgraph2d_styled wplot)
